<resources>
    <string name="app_name">Loci</string>

    // login and sign up
    <string name="action_sign_in_short">Register</string>
    <string name="username">Username</string>
    <string name="long_name">Username is too long</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email.</string>


    <string name="show_entry">Open</string>
    <string name="title_activity_nav_draw">NavDraw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_settings">Settings</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Settings</item>
    </string-array>

    <string name="enter_group_name">Group name</string>
    <string name="private_group">Make group private</string>

    <string name="search">Search</string>
    <string name="search_input">Enter username</string>
    <string name="add_user">Add</string>
    <string name="join_group">Join</string>
    <string name="accept_user">Accept</string>
    <string name="reject_user">Reject</string>

    <string name="entry_title">Title</string>
    <string name="entry_description">Description</string>
    <string name="entry_comment_title">Comments</string>
    <string name="entry_comment">Comment</string>


    <string name="entry_viewable_title">Who can see?</string>
    <string name="entry_viewable_anoyone">Everyone</string>
    <string name="entry_viewable_friends">Just Friends</string>
    <string name="entry_viewable_none">Only me</string>


    <string name="filter_title">Filter entries</string>
    <string name="type_filter_title">Choose media type</string>
    <string name="date_filter_title">Choose date</string>
    <string name="add_filters">Apply</string>
    <string name="filter_everyone">All</string>
    <string name="filter_friends">Friends</string>
    <string name="filter_groups">Groups</string>
    <string name="filter_user">Just me</string>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_create_group">CreateGroup</string>

    <string name="group_section_name">Groups</string>
    <string name="friends_section_name">Users</string>
    <string name="entry_section_name">Entries</string>
    <string name="title_activity_group_settings">GroupSettingsActivity</string>

    // Group settings
    <string name="who_joins">Who can join?</string>
    <string name="everyone">Everyone</string>
    <string name="invite">Invite only</string>
    <string name="admins">Admins only</string>
    <string name="select_admins">Select group admins</string>
    <string name="upload_image">Upload picture</string>
    <string name="who_posts">Who can post?</string>

    // profile settings
    <string name="enter_bio">Enter a bio</string>

    // Near me
    <string name="friends_post">Friends</string>
    <string name="groups_post">Groups</string>
    <string name="anyone_post">Everyone</string>
    <string name="bus_post">Bus stops</string>
    <string name="no_entries">There are no entries in your area</string>
    <string name="be_the_first">Be the first to leave your mark!</string>

    // Upload
    <string name="empty_title">Please enter a title</string>
    <string name="drag_marker_notice">Drag the marker!</string>
    <string name="marker_advice">(Hold down to move)</string>
    <string name="done">Done</string>
    <string name="uploading">Uploading</string>

    // notifications
    <string name="friend_notifications">Friend requests</string>
    <string name="normal_notifications">Notifications</string>

</resources>
