<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="16dp"
    android:gravity="center">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="16dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ire_profile_pic"
                android:layout_alignParentLeft="true"
                android:layout_width="68dp"
                android:layout_height="68dp"/>

            <TextView
                android:id="@+id/ire_name"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_toRightOf="@id/ire_profile_pic"
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <Button
                android:id="@+id/ire_accept_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/accept_user"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/ire_reject_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_toLeftOf="@id/ire_accept_button"
                android:text="@string/reject_user"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>