<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:layout_margin="50dp">
        <RelativeLayout
            android:id="@+id/view_filter_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

            <RadioGroup
                android:id="@+id/filter_radiobuttons"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <RadioButton
                android:text="@string/filter_everyone"
                android:id="@+id/radio_filter_everyone"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

                <RadioButton
                android:text="@string/filter_user"
                android:id="@+id/radio_filter_user"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

                <RadioButton
                android:id="@+id/radio_filter_groups"
                android:text="@string/filter_groups"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

                <RadioButton
                android:id="@+id/radio_filter_friends"
                android:text="@string/filter_friends"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            </RadioGroup>
        </RelativeLayout>

        <View
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RelativeLayout
            android:id="@+id/type_filter_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/view8"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:id="@+id/filter_checkboxes"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:alpha="0.6"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_audiotrack"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                    <CheckBox
                        android:id="@+id/checkbox_audio"
                        android:checked="true"
                        android:gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:alpha="0.6"
                        android:src="@drawable/ic_image" />

                    <CheckBox
                        android:id="@+id/checkbox_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:alpha="0.6"
                        android:src="@drawable/ic_text" />

                    <CheckBox
                        android:id="@+id/checkbox_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_below="@+id/type_filter_wrapper"
            android:alpha="0.2"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_filter_wrapper" />

        <Button
            android:id="@+id/apply_filters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:text="@string/add_filters"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/filter_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/h2"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <View
            android:id="@+id/view8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:alpha="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_filter_wrapper"
            app:layout_constraintHorizontal_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>